Update support email address in index.html

--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
 
                 <div class="highlight-box">
                     <strong>Email:</strong> <a href="mailto:support@affairnkap.com"
-                        class="email-link">support@affairnkap.com</a>
+                        class="email-link">tenebouismael8@gmail.com</a>
                 </div>
 
                 <p>Use the subject line:</p>
@@ -394,7 +394,7 @@
                 <p>If you have questions regarding this process, please contact:</p>
                 <div class="highlight-box">
                     <strong>Support Email:</strong> <a href="mailto:support@affairnkap.com"
-                        class="email-link">support@affairnkap.com</a>
+                        class="email-link">tenebouismael8@gmail.com</a>
                 </div>
             </section>
         </div>
